# baxter-zenoh

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  Rethink.nmconnection  activate.sh  bridge_topics.yaml  connect.sh  network_setup.sh  run_bridge.sh  setup.sh
.github/workflows/: docker.yml
ros1_msgs/arm_navigation_msgs/: CMakeLists.txt  package.xml
ros1_msgs/baxter_core_msgs/: CMakeLists.txt
ros1_msgs/motor_control_plugins_msgs/: CMakeLists.txt  package.xml
ros1_msgs/motor_control_plugins_msgs/srv/: DataRecorder.srv  DynamicPublish.srv  GenericWriteCyclic.srv  GetPositionFK.srv  GetPositionIK.srv  InjectSonarData.srv  SetControllerGains.srv  SetEnable.srv  SetFunction.srv  SetJointState.srv  SetReference.srv  TareLoadCell.srv
ros1_msgs/motor_controller/: CMakeLists.txt  package.xml
ros1_msgs/motor_controller/srv/: ListControllerTypes.srv  LoadController.srv
ros2_msgs/arm_navigation_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2_msgs/arm_navigation_msgs/msg/: CollisionMap.msg  CollisionObject.msg  ContactInformation.msg  MotionPlanRequest.msg  MultiDOFJointState.msg  MultiDOFJointTrajectory.msg  MultiDOFJointTrajectoryPoint.msg  OrientationConstraint.msg  PositionConstraint.msg  SimplePoseConstraint.msg  VisibilityConstraint.msg
ros2_msgs/baxter_core_msgs/: CMakeLists.txt  mapping_rules.yaml
ros2_msgs/motor_control_plugins_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2_msgs/motor_control_plugins_msgs/srv/: DataRecorder.srv  DynamicPublish.srv  GenericReadDebugVar.srv  GenericWriteCyclic.srv  GenericWriteDebugVar.srv  GetPositionFK.srv  GetPositionIK.srv  InjectSonarData.srv  SetControllerGains.srv  SetEnable.srv  SetFunction.srv  SetGravityCompensationTare.srv  SetJointState.srv  SetReference.srv  TareLoadCell.srv
ros2_msgs/motor_controller/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2_msgs/motor_controller/srv/: SwitchControllers.srv
