<?xml version="1.0"?>
<package>
  <name>arm_navigation_msgs</name>
  <version>1.0.0</version>
  <description>Arm navigation messages for Baxter (ROS 1)</description>
  <maintainer email="deboerandnet@gmail.com">Andnet DeBoer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
</package>
