<?xml version="1.0"?>
<package>
  <name>motor_control_plugins_msgs</name>
  <version>1.0.0</version>
  <description>Motor control plugin service messages for Baxter</description>
  <maintainer email="deboerandnet@gmail.com">Andnet DeBoer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
