<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>Motor controller management service messages for Baxter (ROS 2)</description>
  <maintainer email="deboerandnet@gmail.com">Andnet DeBoer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
